# ankigen

./: .gitignore  README.md  gui_app.py  main.py  pyproject.toml
examples/domains/: language.json  programming.json
examples/domains/language/: grammar.json  phrases.json  vocabulary.json
examples/templates/: basic_examples.json  comprehensive_examples.json
src/ankigen/: __init__.py
src/ankigen/agents/: flashcard_workflow.py  iterative_flashcard_workflow.py
src/ankigen/graphs/: subtopic_identification_graph.py
src/ankigen/models/: anki_card.py  learning_intent.py
src/ankigen/packagers/: __init__.py  anki_deck_packager.py  html_preview_packager.py
src/ankigen/services/: __init__.py  flashcard_generation_service.py  intent_analyzer.py  plan_presenter.py
src/ankigen/utils/: template_manager.py
src/ankigen/workflows/: __init__.py  base_workflow.py  example_workflow.py  flashcard_workflow.py  iterative_flashcard_workflow.py  module_workflow.py  subject_workflow.py  topic_workflow.py
src/ankigen/workflows/components/: __init__.py  concept_generator.py
styles/main_app_qss/: main.qss
templates/: back.html  basic-back.html  basic-front.html  comprehensive-front.html  front.html
tests/unit/: test_anki_card_models.py
tests/unit/utils/: test_template_manager.py
