[project]
name = "ankigen"
version = "0.1.0"
description = "Generate Anki Cards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "ipdb>=0.13.13",
    "jinja2>=3.1.6",
    "genanki>=0.13.1",
    "typer>=0.16.0",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pyqt5>=5.15.11",
    "ruff>=0.11.13",
    "pytest-cov>=6.1.1",
    "langchain-google-genai>=2.0.7",
    "langchain-anthropic>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
]
